updated mkdocs and missing files

--- a/infrastructure/nagios/etc/objects/haproxy.cfg
+++ b/infrastructure/nagios/etc/objects/haproxy.cfg
@@ -20,9 +20,9 @@ define host {
 # Define an optional hostgroup for HAProxy Servers
 
 define hostgroup {
-        hostgroup_name  haproxy-servers      ; The name of the hostgroup
-        alias           HAProxy Servers      ; A friendly description of the hostgroup
-        members         haproxy      ; Comma-separated list of host names
+        hostgroup_name  haproxy-servers
+        alias           HAProxy Servers
+        members         haproxy
 }
 
 
@@ -36,9 +36,9 @@ define service {
         host_name                       haproxy
         service_description             PING
         check_command                   check_ping!100.0,20%!500.0,60%
-        check_interval                  1    ; Check every minute in stable state
-        retry_interval                  0.5  ; Retry every 30 seconds
-        max_check_attempts              3    ; Transition to hard state after 3 retries
+        check_interval                  1
+        retry_interval                  0.5
+        max_check_attempts              3
 }
 
 # Define a service to check the load on HAProxy (optional, requires NRPE setup)
