--- a/infrastructure/nagios/etc/objects/service_groups.cfg
+++ b/infrastructure/nagios/etc/objects/service_groups.cfg
@@ -1,3 +1,11 @@
+###############################################################################
+###############################################################################
+#
+# SERVICE GROUP DEFINITIONS
+#
+###############################################################################
+###############################################################################
+
 define servicegroup {
         servicegroup_name   ping-services
         alias               Ping Checks for All Hosts
