--- a/infrastructure/nagios/etc/objects/webservers.cfg
+++ b/infrastructure/nagios/etc/objects/webservers.cfg
@@ -29,9 +29,9 @@ define host {
 # Define an optional hostgroup for Web Servers
 
 define hostgroup {
-        hostgroup_name  web-servers      ; The name of the hostgroup
-        alias           Web Servers      ; A friendly description of the hostgroup
-        members         web-a,web-b      ; Comma-separated list of host names
+        hostgroup_name  web-servers
+        alias           Web Servers
+        members         web-a,web-b
 }
 
 ###############################################################################
@@ -44,9 +44,9 @@ define service {
         host_name                       web-a,web-b
         service_description             PING
         check_command                   check_ping!100.0,20%!500.0,60%
-        check_interval                  1    ; Check every minute in stable state
-        retry_interval                  0.5  ; Retry every 30 seconds
-        max_check_attempts              3    ; Transition to hard state after 2 retries
+        check_interval                  1
+        retry_interval                  0.5
+        max_check_attempts              3
 }
 
 # Define a service to check HTTP availability on Web Server A and B
@@ -63,8 +63,8 @@ define service {
         host_name                       localhost
         service_description             Web Server Status
         check_command                   check_webservers!5
-        check_interval                  1    ; Check every minute in stable state
-        retry_interval                  0.5  ; Retry every 30 seconds
-        max_check_attempts              2    ; Transition to hard state after 2 retries
+        check_interval                  1
+        retry_interval                  0.5
+        max_check_attempts              2
 }
 
