--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install mkdocs-material mkdocs-github-deploy
+        pip install mkdocs-material
 
     - name: Deploy to GitHub Pages
       run: mkdocs gh-deploy --force
