github action for pages

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Deploy to GitHub Pages
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.MKDOCS_TOKEN }}
       run: |
         poetry run mkdocs gh-deploy --config-file mkdocs/mkdocs.yml --force
 
