--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,33 +1,26 @@
-name: Deploy MkDocs to GitHub Pages
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-
-    - name: Install Poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-
-    - name: Install dependencies
-      run: |
-        poetry install
-
-    - name: Deploy to GitHub Pages
-      env:
-        GITHUB_TOKEN: ${{ secrets.MKDOCS_TOKEN }}
-      run: poetry run mkdocs gh-deploy --config-file mkdocs/mkdocs.yml --force
-
+---
+    name: Deploy MkDocs to GitHub Pages
+    on:
+      push:
+        branches:
+          - main
+    jobs:
+      deploy:
+        runs-on: ubuntu-latest
+        steps:
+          - name: Checkout repository
+            uses: actions/checkout@v3
+          - name: Setup Python
+            uses: actions/setup-python@v4
+            with:
+              python-version: "3.10"
+          - name: Install Poetry
+            run: |
+              curl -sSL https://install.python-poetry.org | python3 -
+          - name: Install dependencies
+            run: |
+              poetry install
+          - name: Deploy to GitHub Pages
+            env:
+              GITHUB_TOKEN: ${{ secrets.MKDOCS_TOKEN }}
+            run: poetry run mkdocs gh-deploy --config-file mkdocs/mkdocs.yml --force
